enforce reactivation threshold to be 50ms bigger

than actication threshold.
Things don't work otherwise.

BUG: 323588
FIXED-IN: 4.11.1
REVIEW: 112125